infra/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: main-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /gateway(/|$)(.*)
            backend:
              service:
                name: gateway
                port:
                  number: 8000
            pathType: ImplementationSpecific
          - path: /dashboard(/|$)(.*)
            backend:
              service:
                name: opensearch-dashboards
                port:
                  number: 5601
            pathType: ImplementationSpecific
